KMS property fetch complains that 'DPMS' is an enum
Starting Weston with the DRM backend will complain for every connector:
[18:04:23.299] DRM: expected property DPMS to not be an enum, but it is; ignoring
This should be fairly trivially fixed by recognising the enum values, which are On
, Standby
, Suspend
, and Off
. We would only use on and off.